# gpep517

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
gpep517/: __init__.py  __main__.py  build.py  install.py  qa.py  scheme.py  utils.py
test/: backend.py  common.py  conftest.py  test_build.py  test_install.py  test_integration.py  test_main.py  test_verify_pyc.py
test/integration/flit_core/: pyproject.toml
test/integration/hatchling/: pyproject.toml
test/integration/pdm.pep517/: LICENSE  pyproject.toml
test/integration/poetry.core/: pyproject.toml  testpkg
test/integration/setuptools-legacy/: setup.cfg
test/sub-path/: backend.py
test/symlink-pkg/: pyproject.toml
test/symlink-pkg/foo/: a.py  b.py
test/test-pkg/: oldscript  setup.py  test.h
test/test-pkg/testpkg/: __init__.py
