[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpep517"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "installer >= 0.5",
    "tomli >= 1.2.3",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
gpep517 = "gpep517.__main__:main"

[project.urls]
Home = "https://github.com/mgorny/gpep517/"
