[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpep517"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = {text = "GPL-2.0-or-later"}
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "installer >= 0.5",
    "tomli >= 1.2.3; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest",
]
test-full = [
    "flit_core",
    "hatchling",
    "pdm-pep517",
    "poetry-core",
    "setuptools",
    "wheel",
]

[project.scripts]
gpep517 = "gpep517.__main__:main"

[project.urls]
Home = "https://github.com/mgorny/gpep517/"

[tool.flit.sdist]
include = [
    "COPYING",
    "test",
    "tox.ini",
]
exclude = [
    "test/__pycache__",
    "test/sub-path/__pycache__",
]

[tool.pytest.ini_options]
xfail_strict = true
