[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testpkg"
authors = [{name = "tester", email = "tester@example.com"}]
license = {text = "MIT"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
Home = "https://example.com/"

[project.scripts]
newscript = "testpkg:entry_point"
