[build-system]
requires = ["hatchling>=0.21.1"]
build-backend = "hatchling.build"

[project]
name = "testpkg"
description = "A test package"
authors = [{name = "tester", email = "tester@example.com"}]
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Home = "https://example.com/"

[project.scripts]
newscript = "testpkg:entry_point"

[tool.hatch.version]
path = "testpkg/__init__.py"
