[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testpkg"
version = "1"
description = "A test package"
license = "MIT"
authors = ["tester <tester@example.com>"]
homepage = "https://example.com/"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
newscript = "testpkg:entry_point"
