[metadata]
name = testpkg
version = 1
#attr: testpkg:__version__
url = https://example.com/
author = tester
author_email = tester@example.com
license = MIT
description = A test package
dynamic = ["version", "description"]

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    newscript = testpkg:entry_point
